2003-08-22	Joel Sherrill <joel@OARcorp.com>

	PR 445/bsps
	* bsp_specs: Hand edited to duplicate change Ralf applied to the CVS
	trunk.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-06-13	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Removed warnings.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds, startup/linkcmds.ram, startup/linkcmds.rom: Fix to
	work around truncated section names.

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds, startup/linkcmds.ram, startup/linkcmds.rom: Add
	FreeBSD sysctl() sections.

2003-01-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Reflect changes to libcpu/sh/*.

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* scitab/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* start/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use install-data-local to install startfile.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-11-07	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Include all .rodata* sections.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* start/start.S, startup/hw_init.c: Removed warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-14	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: As part of fixing PR281 on gensh4, a review