@@ -23,7 +23,7 @@
  *
  *  The license and distribution terms for this file may be
  *  found in the file LICENSE in this distribution or at
- *  http://www.OARcorp.com/rtems/license.html.
+ *  http://www.rtems.com/license/LICENSE.
  *
  *	Modified to reflect SH7045F processor and EVB:
  *	John M. Mills (jmills@tga.com)
