@@ -1,3 +1,10 @@
+2003-09-04	Joel Sherrill <joel@OARcorp.com>
+
+	* console/config.c, include/bsp.h, include/coverhd.h, start/start.S,
+	start/start.ram, start/start.rom, startup/bspclean.c,
+	startup/bspstart.c, startup/hw_init.c, startup/linkcmds,
+	startup/linkcmds.ram, startup/linkcmds.rom: URL for license changed.
+
 2003-08-22	Joel Sherrill <joel@OARcorp.com>
 
 	PR 445/bsps
